# exweb

./: README.md  main.py  pyproject.toml
.github/instructions/: ai-rules.instructions.md  project-plan.instructions.md
backend/: .gitignore  requirements.txt
backend/accounts/: models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_initial.py
backend/config/: settings.py  urls.py
backend/maiu/: apps.py  models.py  serializers.py  urls.py  views.py
backend/maiu/migrations/: 0001_initial.py
backend/maiu/services/: ncp_storage.py
frontend/: eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/auth/: protectedRoute.tsx
frontend/src/pages/auth/: LoginPage.tsx
frontend/src/pages/maiu/: MaiuUploadPage.tsx
frontend/src/services/: index.ts
frontend/src/services/api/: auth.ts  index.ts  maiu.ts  user.ts
frontend/src/store/: authStore.ts  maiuStore.ts
frontend/src/types/: index.ts
